Garbage Collection, Memory Leak notes updated